Introduce a class 'modal-tall' to whats-cwic modal to prevent stretching other shorter modals.

--- a/app/assets/stylesheets/modules/modal.css.scss
+++ b/app/assets/stylesheets/modules/modal.css.scss
@@ -1,8 +1,7 @@
 .modal-dialog,
-.modal-content {
+.modal-tall {
   /* 80% of window height */
   height: 80%;
-  max-height: 80%;
 }
 
 .modal-body {
